<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">LoadApp</string>
    <string name="app_description">Download files from Internet</string>
    <string name="action_settings">Settings</string>
    <string name="notification_title">Udacity: Android Kotlin Nanodegree </string>
    <string name="notification_description">The Project 3 repository is downloaded</string>
    <string name="notification_channel_id">LoadApp Channel</string>
    <string name="notification_action">Check the status</string>
    <string name="button_name">Click me</string>
    <string name="title_activity_detail">Detail Activity</string>
    <string name="cloud_download_image">Cloud Download Image</string>
    <string name="download_text">Download</string>
    <string name="file_name_label">File name:</string>
    <string name="file_name">URL path</string>
    <string name="status_label">Status:</string>
    <string name="success">Success</string>
    <string name="ok_button">OK</string>
    <string name="notification_success_format">%s repository is downloaded</string>
    <string name="notification_failed_format">Download failed for %s repository</string>
    <string name="button_loading">We are loading </string>
    <string name="glide_radio_text">Glide - Image Loading Library by BumpTech</string>
    <string name="load_app_radio_text">LoadApp - Current repository by Udacity</string>
    <string name="retrofit_radio_text">Retrofit - Type-safe HTTP client for Android and Java by Square, Inc</string>
    <string name="select_file_to_download">Select a file to download!</string>
    <string name="button_download">Download</string>
    <string name="download_notification_channel_id">download_channel</string>
    <string name="download_notification_channel_name">Download</string>
    <string name="status">Status:</string>
    <string name="download_channel_description">Notifies when download is completed</string>
    <string name="failed">Failed</string>
    <string name="glide_string">Glide -Image Loading Library by Bump Tech</string>
    <string name="loadapp_string">LoadApp - Current repository by Udacity</string>
    <string name="retrofit_string">Retrofit - Type-safe HTTP client for Android and Java by Square, Inc</string>
</resources>
