<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/motion_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layoutDescription="@xml/details_animation"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".DetailActivity">

    <Button
        android:id="@+id/ok_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#f7a622"
        android:text="@string/ok_button"
        android:textColor="#5D4037"
        android:textSize="18sp"
        tools:layout_editor_absoluteY="731dp" />

    <TextView
        android:id="@+id/file_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/file_name"
        android:textColor="#2E7D32"
        android:textSize="18sp"
        tools:layout_editor_absoluteX="323dp"
        tools:layout_editor_absoluteY="54dp" />

    <TextView
        android:id="@+id/status_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/status_label"
        android:textSize="18sp"
        tools:layout_editor_absoluteX="79dp"
        tools:layout_editor_absoluteY="72dp" />

    <TextView
        android:id="@+id/status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/success"
        android:textSize="18sp"
        tools:layout_editor_absoluteX="130dp"
        tools:layout_editor_absoluteY="56dp" />

    <TextView
        android:id="@+id/file_name_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/file_name_label"
        android:textSize="18sp"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="16dp" />


</androidx.constraintlayout.motion.widget.MotionLayout>